--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,20 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h1>ながのCAKE</h1>
+    <nav>
+      <ul>
+        <li>
+          <%= link_to 'log in'%>
+        </li>
+        <li>
+          <%= link_to 'sign in'%>
+        </li>
+        <li>
+          <%= link_to 'About'%>
+        </li>
+
+        <li>
+          <%= link_to 'cart'%>
+        </li>
+      </ul>
+    </nav>
+  </header>
+    <footer><div>フッター</div></footer>
