--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,2 +1,27 @@
-<h1>Items#new</h1>
-<p>Find me in app/views/items/new.html.erb</p>
+<body>
+	<h1>商品 新規登録画面</h1>
+	<div>
+		<%= attachment_image_tag @item, :image, :fill, 60, 60,fallback: "no_image.jpg"%>
+	</div>
+	<%= f.attachment_field :image %>
+
+	<% form_for(@item) do |f| %>
+	<div>
+		<label><input type="text" name="" >商品名</label>
+		<%= f.text_field :name%>
+
+		<label><input type="text" name="" >商品説明</label>
+		<%= f.text_area :description%>
+
+		<label><input type="text" name="" >ジャンル</label>
+		<%= f.text_field :genres.name%>
+
+		<label><input type="text" name="" >税抜価格</label>
+		<%= f.text_field :price%>
+
+		<label><input type="text" name="" >販売ステータス</label>
+		<%= f.text_field :sale_status%>
+		<%= f.submit "新規登録" %>
+		<% end %>
+	</div>
+</body>
