--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,13 @@
     <nav>
       <ul>
         <li>
-          <%= link_to 'log in'%>
+          <%= link_to 'log in', new_end_user_session_path %>
         </li>
         <li>
-          <%= link_to 'sign in'%>
+          <%= link_to 'sign in', new_end_user_registration_path %>
         </li>
         <li>
-          <%= link_to 'About'%>
+          <%= link_to 'About', homes_about_path %>
         </li>
 
         <li>
