--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
         <li>
           <%= link_to 'cart'%>
         </li>
+        <li>
+          <%= link_to 'logout', destroy_end_user_session_path, method: :delete %>
+        </li>
       </ul>
     </nav>
   </header>
