--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -1,27 +1,26 @@
-<body>
-	<h1>商品 新規登録画面</h1>
-	<div>
-		<%= attachment_image_tag @item, :image, :fill, 60, 60,fallback: "no_image.jpg"%>
-	</div>
-	<%= f.attachment_field :image %>
+	<body>
+		<h1>商品 新規登録画面</h1>
 
-	<% form_for(@item) do |f| %>
-	<div>
-		<label><input type="text" name="" >商品名</label>
-		<%= f.text_field :name%>
+		<%= form_for(@item,url: admins_items_path,method: :post) do |f| %>
+		<%= f.attachment_field :image %>
 
-		<label><input type="text" name="" >商品説明</label>
-		<%= f.text_area :description%>
+		<div>
+			<label>商品名</label>
+			<%= f.text_field :name%>
 
-		<label><input type="text" name="" >ジャンル</label>
-		<%= f.text_field :genres.name%>
+			<label>商品説明</label>
+			<%= f.text_area :description%>
 
-		<label><input type="text" name="" >税抜価格</label>
-		<%= f.text_field :price%>
+			<label>ジャンル</label>
+			<%= f.text_field :genre_id%>
 
-		<label><input type="text" name="" >販売ステータス</label>
-		<%= f.text_field :sale_status%>
-		<%= f.submit "新規登録" %>
+			<label>税抜価格</label>
+			<%= f.text_field :price%>
+
+			<label>販売ステータス</label>
+			<%= f.text_field :sale_status%>
+
+			<%= f.submit "新規登録" %>
+		</div>
 		<% end %>
-	</div>
-</body>
+	</body>
