--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -12,13 +12,13 @@
 			<%= f.text_area :description%>
 
 			<label>ジャンル</label>
-			<%= f.text_field :genre_id%>
+			<%= f.collection_select :genre_id, Genre.all, :id, :name %>
 
-			<label>税抜価格</label>
+			<label>税抜価格 ¥</label>
 			<%= f.text_field :price%>
 
 			<label>販売ステータス</label>
-			<%= f.text_field :sale_status%>
+			<%= f.select :sale_status, [["販売中", "販売中"], ["販売休止中", "販売休止中"]] %>
 
 			<%= f.submit "新規登録" %>
 		</div>
