--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,37 @@
   <body>
     <h1>ながのCAKE</h1>
     <nav>
+      <% if end_user_signed_in? %>
       <ul>
+        <li>
+           <%= link_to 'my.page' %>
+        </li>
+        <li>
+          <%= link_to 'About' %>
+        </li>
+        <li>
+          <%= link_to 'logout', destroy_end_user_session_path, method: :delete %>
+        </li>
+        <li>
+          <%= link_to 'cart'%>
+        </li>
+      <% elsif admin_signed_in? %>
+      <li>
+          <%= link_to '商品一覧' %>
+        </li>
+        <li>
+          <%= link_to '会員一覧' %>
+        </li>
+        <li>
+          <%= link_to '注文履歴一覧' %>
+        </li>
+        <li>
+          <%= link_to 'ジャンル管理' %>
+        </li>
+        <li>
+          <%= link_to 'logout', destroy_end_user_session_path, method: :delete %>
+        </li>
+      <% else %>
         <li>
           <%= link_to 'log in', new_end_user_session_path %>
         </li>
@@ -22,13 +52,7 @@
         <li>
           <%= link_to 'About', homes_about_path %>
         </li>
-
-        <li>
-          <%= link_to 'cart'%>
-        </li>
-        <li>
-          <%= link_to 'logout', destroy_end_user_session_path, method: :delete %>
-        </li>
+       <% end %>
       </ul>
     </nav>
   </header>
