--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,7 @@
     </ul>
   </nav>
 </header>
+<%= yield %>
 <footer class="container">
   <div class="row">
     <div class="col-xs-3 col-xs-offset-9">
