--- a/app/views/end_users/cart_items/index.html.erb
+++ b/app/views/end_users/cart_items/index.html.erb
@@ -2,28 +2,28 @@
 
 <thead>
 	<tr>
-		<tb>商品名</tb>
-		<tb>単価(税抜)</tb>
-		<tb>数量</tb>
-		<tb>小計</tb>
-		<tb></tb>
+		<th>商品名</th>
+		<th>単価(税抜)</th>
+		<th>数量</th>>
+		<th>小計</th>
+		<th></th>
 	</tr>
 
 	<tr>
 		<tb>
-			<%= link_to %>
+			<%= %>
 		</tb>
 		<tb>
-			<%= link_to %>
+			<%=  %>
 		</tb>
 		<tb>
-			<%= link_to %>
+			<%=  %>
 		</tb>
 		<tb>
-			<%= link_to %>
+			<%=  %>
 		</tb>
 		<tb>
-			<%= link_to %>
+			<%=  %>
 		</tb>
 	</tr>
 </thead>
