--- a/app/views/end_users/items/show.html.erb
+++ b/app/views/end_users/items/show.html.erb
@@ -7,30 +7,31 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td><% link_to "ケーキ", %></td>
+				<td><% link_to "ケーキ", "" %></td>
 			</tr>
 			<tr>
-				<td><% link_to "焼き菓子", %></td>
+				<td><% link_to "焼き菓子", "" %></td>
 			</tr>
 			<tr>
-				<td><% link_to "プリン", %></td>
+				<td><% link_to "プリン", "" %></td>
 			</tr>
 			<tr>
-				<td><% link_to "キャンディ", %></td>
+				<td><% link_to "キャンディ", "" %></td>
 			</tr>
 		</tbody>
 	</table>
 
 	<div class="item_image">
-		<%= attachment_image_tag @item, :image_id, size: 50, fallback:"no_image.jpg"%>
+		<%= attachment_image_tag @item, :image, size: 50, fallback:"no_image.jpg"%>
 		<%= @item.name %>
 		<%= @item.description %>
-		<%= @item.price %>
+		<p>¥<%= @item.price %>(税込)</p>
 	</div>
 
-	<%= form_for @item do |f| %>
-		<%= f.label :order_quantity, %>
-		<%= f.select :order_quantity, [1..30] %>
+	<%= form_for(@cart_item, url:end_users_cart_items_path) do |f| %>
+		<%= f.label :quantity %>
+		<%= f.select :quantity,(1..30).to_a %>
+		<%= f.submit "カートに入れる" %>
 	<% end %>
 
 </body>
