--- a/app/views/admins/end_users/index.html.erb
+++ b/app/views/admins/end_users/index.html.erb
@@ -12,10 +12,10 @@
 		<tbody>
 			<% @end_users.each do |end_user| %>
 			<tr>
-				<td><%= link_to  %></td>
-				<td><%=   %></td>
-				<td><%=   %></td>
-				<td><%=   %></td>
+				<td><%= end_user.id %></td>
+				<td><%= link_to @end_user.name,admins_end_user_path(end_user.id)  %></td>
+				<td><%= end_user.email  %></td>
+				<td><%= "後で記述"  %></td>
 			</tr>
 			<% end %>
 		</tbody>
