--- a/app/views/end_users/items/show.html.erb
+++ b/app/views/end_users/items/show.html.erb
@@ -7,16 +7,16 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td><% link_to "ケーキ", "" %></td>
+				<td><% link_to "ケーキ",end_users_path(@item.genre_id) %></td>
 			</tr>
 			<tr>
-				<td><% link_to "焼き菓子", "" %></td>
+				<td><% link_to "焼き菓子",end_users_path() %></td>
 			</tr>
 			<tr>
-				<td><% link_to "プリン", "" %></td>
+				<td><% link_to "プリン",end_users_path() %></td>
 			</tr>
 			<tr>
-				<td><% link_to "キャンディ", "" %></td>
+				<td><% link_to "キャンディ",end_users_path() %></td>
 			</tr>
 		</tbody>
 	</table>
