--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           <%= link_to 'logout', destroy_end_user_session_path, method: :delete %>
         </li>
         <li>
-          <%= link_to 'cart'%>
+          <%= link_to 'cart', end_users_cart_items_path %>
         </li>
       <% elsif admin_signed_in? %>
       <li>
