--- a/app/views/end_users/registrations/new.html.erb
+++ b/app/views/end_users/registrations/new.html.erb
@@ -1,27 +1,75 @@
 <h2>登録情報</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+<table>
+  <tbody>
+    <tr>
+      <td>氏名</td>
+      <td><div class="field">
+        <%= f.text_field :first_name %>
+      </div></td>
+      <td><div class="field">
+        <%= f.text_field :last_name ,autofocus: true %>
+      </div></td>
+    </tr>
+    <tr>
+      <td>カナ</td>
+      <td><div class="field">
+        <%= f.text_field :first_name_kana, autofocus: true %>
+      </div></td>
+      <td><div class="field">
+<%= f.text_field :last_name_kana, autofocus: true %>
+      </div></td>
+    </tr>
+    <tr>
+      <td>郵便番号</td>
+      <td><div class="field">
+        <%= f.text_field :zip_code, autofocus: true %>
+      </div></td>
+    </tr>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <tr>
+      <td>住所</td>
+      <td><div class="field">
+        <%= f.text_field :address, autofocus: true  %>
+      </div></td>
+    </tr>
+    <tr>
+      <td>電話番号</td>
+      <td><div class="field">
+        <%= f.text_field :phone_number, autofocus: true %>
+      </div></td>
+    </tr>
+    <tr>
+      <td>メールアドレス</td>
+      <td><div class="field">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div></td>
+    </tr>
+    <tr>
+      <td>パスワード</td>
+      <td><div class="field">
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div></td>
+    </tr>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <tr>
+      <td>パスワード確認</td>
+      <td><div class="field">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div></td>
+    </tr>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+    <tr>
+      <td><div class="actions">
+        <%= f.submit "Sign up" %>
+      </div></td>
+    </tr>
+  </tbody>
+</table>
 <% end %>
