--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -1,26 +1,30 @@
-<h1>商品一覧画面</h1>
+<div class="container">
+	<div class="row">
+		<h2>商品一覧画面</h2>
 
-<%= link_to  "商品登録", new_admins_item_path  %>
+		<%= link_to  "", new_admins_item_path, class: "pull-right col-xs-1 btn btn-default glyphicon glyphicon-plus" %>
 
-<table>
-	<thead>
-		<tr>
-			<th>商品ID</th>
-			<th>商品名</th>
-			<th>税抜価格</th>
-			<th>ジャンル</th>
-			<th>ステータス</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @items.each do |item| %>
-		<tr>
-			<td><%= item.id %></td>
-			<td><%= item.name %></td>
-			<td><%= item.price %></td>
-			<td><%= item.genre.name%></td>
-			<td><%= item.sale_status %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>商品ID</th>
+					<th>商品名</th>
+					<th>税抜価格</th>
+					<th>ジャンル</th>
+					<th>ステータス</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @items.each do |item| %>
+				<tr>
+					<td><%= item.id %></td>
+					<td><%= item.name %></td>
+					<td><%= item.price %></td>
+					<td><%= item.genre.name%></td>
+					<td><%= item.sale_status %></td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
+	</div>
+</div>
