--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,55 +13,57 @@
   <header class="sticky-top">
     <h1>ながのCAKE</h1>
     <nav class="container">
-      <% if end_user_signed_in? %>
       <ul class="nav navbar-nav">
-        <li>
-           <%= link_to 'my.page' %>
-        </li>
-        <li>
-          <%= link_to 'About', end_users_homes_about_path %>
-        </li>
-        <li>
-          <%= link_to 'logout', destroy_end_user_session_path, method: :delete %>
-        </li>
-        <li>
-          <%= link_to 'cart', end_users_cart_items_path %>
-        </li>
+        <% if end_user_signed_in? %>
+        <li class="">
+          <a class="glyphicon glyphicon-user" <%= link_to 'My.Page' %> </a>
+       </li>
+       <li class="">
+        <a class="glyphicon glyphicon-link about" <%= link_to 'About', end_users_homes_about_path %> </a>
+      </li>
+      <li class="">
+        <a class="glyphicon glyphicon-log-out" aria-hidden="true"<%= link_to 'Logout', destroy_end_user_session_path, method: :delete %> </a>
+      </li>
+      <li class="">
+        <a class="glyphicon glyphicon-shopping-cart" aria-hidden="true"<%= link_to 'Cart', end_users_cart_items_path %> </a>
+      </li>
       <% elsif admin_signed_in? %>
-      <li>
-          <%= link_to '商品一覧', admins_items_path %>
-        </li>
-        <li>
-          <%= link_to '会員一覧', admins_end_users_path %>
-        </li>
-        <li>
-          <%= link_to '注文履歴一覧' %>
-        </li>
-        <li>
-          <%= link_to 'ジャンル管理', admins_genres_path %>
-        </li>
-        <li>
-          <%= link_to 'logout', destroy_end_user_session_path, method: :delete %>
-        </li>
+      <li class="">
+        <a class="glyphicon glyphicon-th" aria-hidden="true"<%= link_to '商品一覧', admins_items_path %> </a>
+      </li>
+      <li class="">
+        <a class="glyphicon glyphicon-user" <%= link_to '会員一覧', admins_end_users_path %> </a>
+      </li>
+      <li class="">
+        <a class="glyphicon glyphicon-th-list" aria-hidden="true"<%= link_to '注文履歴一覧' %> </a>
+      </li>
+      <li class="">
+        <a class="glyphicon glyphicon-tag" aria-hidden="true" <%= link_to 'ジャンル管理', admins_genres_path %> </a>
+      </li>
+      <li class="">
+        <a class="glyphicon glyphicon-log-out" aria-hidden="true"<%= link_to 'Logout', destroy_end_user_session_path, method: :delete %> </a>
+      </li>
 
       <% else %>
-      <li>
-        <%= link_to 'log in', new_end_user_session_path %>
+      <li class="">
+        <a class="glyphicon glyphicon-log-in" aria-hidden="true"   <%= link_to ' Login', new_end_user_session_path %> </a>
       </li>
-      <li>
-        <%= link_to 'sign in', new_end_user_registration_path %>
+      <li class="">
+        <a class="glyphicon glyphicon-edit sign_up"  <%= link_to ' Signin', new_end_user_registration_path %> </a>
       </li>
-      <li>
-        <%= link_to 'About', homes_about_path %>
+      <li class="">
+        <a class="glyphicon glyphicon-link about" <%= link_to 'About', homes_about_path %> </a>
       </li>
       <% end %>
     </ul>
   </nav>
 </header>
-<%= yield %>
+<div class="body">
+  <%= yield %>
+</div>
 <footer class="container">
   <div class="row">
-    <div class="col-xs-3 col-xs-offset-9">
+    <div class="col-xs-3 col-xs-offset-4">
       <p>©ながのCAKE Production by TGT</p>
     </div>
   </footer>
