--- a/app/views/admins/genres/index.html.erb
+++ b/app/views/admins/genres/index.html.erb
@@ -1,49 +1,53 @@
-<h1>ジャンル追加・一覧画面</h1>
+<div class="container">
+	<div class="row">
+		<h2>ジャンル追加・一覧画面</h2>
 
-<label>ジャンル</label>
-<%= form_for(@genre,url:admins_genres_path, method: :post) do |f| %>
+		<label>ジャンル</label>
+		<%= form_for(@genre,url:admins_genres_path, method: :post) do |f| %>
 
-<%= f.text_field :name%>
-<!-- ここにラジオボタン追加 -->
+		<!-- ここにラジオボタン追加 -->
 
 
-<div>
-	<label>
-		<%= f.radio_button :is_active, true %>有効
-	</label>
-	<label>
-		<%= f.radio_button :is_active, false %>無効
-	</label>
-</div>
+		<div class="col-xs-3">
+			<label>
+				<%= f.radio_button :is_active, true %>有効
+			</label>
+			<label>
+				<%= f.radio_button :is_active, false %>無効
+			</label>
+		</div>
+		<%= f.text_field :name%>
+		<%= f.submit "追加" %>
 
-<%= f.submit "追加" %>
-<% end %>
-
-<table>
-	<thead>
-		<tr>
-			<th>ジャンル</th>
-			<th>状態</th>
-			<th></th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @genres.each do |genre| %>
-		<tr>
-			<td>
-				<%= genre.name %>
-			</td>
-			<td>
-				<% if genre.is_active == true %>
-					有効
-				<% else %>
-					無効
-				<% end %>
-			</td>
-			<td>
-				<%= link_to "編集する", edit_admins_genre_path(genre.id) %>
-			</td>
-		</tr>
 		<% end %>
-	</tbody>
-</table>
+
+		<table class="table table-hover table-inverse">
+			<thead>
+				<tr>
+					<th>ジャンル</th>
+					<th>状態</th>
+					<th colspan="3"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @genres.each do |genre| %>
+				<tr>
+					<td>
+						<%= genre.name %>
+					</td>
+					<td>
+						<% if genre.is_active == true %>
+						有効
+						<% else %>
+						無効
+						<% end %>
+					</td>
+					<td>
+						<%= link_to "編集する", edit_admins_genre_path(genre.id) %>
+					</td>
+				</tr>
+				<% end %>
+			</tbody>
+		</table>
+	</div>
+</div>
