--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -1,30 +1,44 @@
+<div class="container">
+	<div class="row">
 
-<body>
+		<h2>商品 新規登録画面</h2>
 
-	<h1>商品 新規登録画面</h1>
+		<%= form_for(@item,url: admins_items_path,method: :post) do |f| %>
+		<%= f.attachment_field :image %>
 
-	<%= form_for(@item,url: admins_items_path,method: :post) do |f| %>
-	<%= f.attachment_field :image %>
+		<div class= "pull-right col-xs-8">
+			<ul>
+				<li>
+					<label>商品名</label>
+					<%= f.text_field :name%>
+				</li>
 
-	<div>
-		<label>商品名</label>
-		<%= f.text_field :name%>
+				<li>
+					<label>商品説明</label>
+					<%= f.text_area :description%>
+				</li>
+				<li>
+
+					<label>ジャンル</label>
+					<%= f.collection_select :genre_id, Genre.all, :id, :name %>
+				</li>
+				<li>
+
+					<label>税抜価格 ¥</label>
+					<%= f.text_field :price%>
+				</li>
+				<li>
+
+					<label>販売ステータス</label>
+					<%= f.select :sale_status, [["販売中", "販売中"], ["販売休止中", "販売休止中"]] %>
+				</li>
+				<li>
 
 
-		<label>商品説明</label>
-		<%= f.text_area :description%>
-
-		<label>ジャンル</label>
-		<%= f.collection_select :genre_id, Genre.all, :id, :name %>
-
-		<label>税抜価格 ¥</label>
-		<%= f.text_field :price%>
-
-		<label>販売ステータス</label>
-		<%= f.select :sale_status, [["販売中", "販売中"], ["販売休止中", "販売休止中"]] %>
-
-
-		<%= f.submit "新規登録" %>
+					<%= f.submit "新規登録" %>
+				</li>
+			</ul>
+		</div>
+		<% end %>
 	</div>
-	<% end %>
-</body>
+</div>
