--- a/app/views/end_users/registrations/new.html.erb
+++ b/app/views/end_users/registrations/new.html.erb
@@ -1,75 +1,108 @@
-<h2>登録情報</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-<%= render "devise/shared/error_messages", resource: resource %>
+<div class="container">
+  <div class="form-horizontal">
+    <h2>登録情報</h2>
 
-<table>
-  <tbody>
-    <tr>
-      <td>氏名</td>
-      <td><div class="field">
-        <%= f.text_field :first_name %>
-      </div></td>
-      <td><div class="field">
-        <%= f.text_field :last_name ,autofocus: true %>
-      </div></td>
-    </tr>
-    <tr>
-      <td>カナ</td>
-      <td><div class="field">
-        <%= f.text_field :first_name_kana, autofocus: true %>
-      </div></td>
-      <td><div class="field">
-<%= f.text_field :last_name_kana, autofocus: true %>
-      </div></td>
-    </tr>
-    <tr>
-      <td>郵便番号</td>
-      <td><div class="field">
-        <%= f.text_field :zip_code, autofocus: true %>
-      </div></td>
-    </tr>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="well">
 
-    <tr>
-      <td>住所</td>
-      <td><div class="field">
-        <%= f.text_field :address, autofocus: true  %>
-      </div></td>
-    </tr>
-    <tr>
-      <td>電話番号</td>
-      <td><div class="field">
-        <%= f.text_field :phone_number, autofocus: true %>
-      </div></td>
-    </tr>
-    <tr>
-      <td>メールアドレス</td>
-      <td><div class="field">
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-      </div></td>
-    </tr>
-    <tr>
-      <td>パスワード</td>
-      <td><div class="field">
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
-      </div></td>
-    </tr>
+      <table class="form-group">
+        <tbody>
+          <tr>
+            <td>氏名</td>
+            <td>
+              <div class="field">
+                <%= f.label "姓(漢字)"%>
+                <%= f.text_field :first_name %>
+              </div>
+            </td>
+            <td>
+              <div class="field">
+                <%= f.label "名(漢字)" %>
+                <%= f.text_field :last_name ,autofocus: true %>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>フリガナ</td>
+            <td>
+              <div class="field">
+                <%= f.label "姓(フリガナ)" %>
+                <%= f.text_field :first_name_kana, autofocus: true %>
+              </div>
+            </td>
+            <td>
+              <div class="field">
+                <%= f.label "名(フリガナ)" %>
+                <%= f.text_field :last_name_kana, autofocus: true %>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>郵便番号</td>
+            <td>
+              <div class="field">
+                <%= f.text_field :zip_code, autofocus: true %>
+              </div>
+            </td>
+          </tr>
 
-    <tr>
-      <td>パスワード確認</td>
-      <td><div class="field">
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div></td>
-    </tr>
+          <tr>
+            <td>住所</td>
+            <td>
+              <div class="field">
+                <%= f.text_field :address, autofocus: true  %>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>電話番号</td>
+            <td>
+              <div class="field">
+                <%= f.text_field :phone_number, autofocus: true %>
+                </div
+                ></td>
+              </tr>
+              <tr>
+                <td>メールアドレス</td>
+                <td>
+                  <div class="field">
+                    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>パスワード</td>
+                <td>
+                  <div class="field">
+                    <% if @minimum_password_length %>
+                    <em>(<%= @minimum_password_length %> characters minimum)</em>
+                    <% end %>
+                    <br />
+                    <%= f.password_field :password, autocomplete: "new-password" %>
+                  </div>
+                </td>
+              </tr>
 
-    <tr>
-      <td><div class="actions">
-        <%= f.submit "Sign up" %>
-      </div></td>
-    </tr>
-  </tbody>
-</table>
-<% end %>
+              <tr>
+                <td>パスワード確認</td>
+                <td>
+                  <div class="field">
+                    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+                  </div>
+                </td>
+              </tr>
+            </div>
+            <tr>
+              <td>
+                <div class="actions">
+                  <%= f.submit "Sign up" %>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <% end %>
+      </div>
+    </div>
