--- a/app/views/admins/items/index.html.erb
+++ b/app/views/admins/items/index.html.erb
@@ -16,7 +16,7 @@
 		<% @items.each do |item| %>
 		<tr>
 			<td><%= item.id %></td>
-			<td><%= item.name %></td>
+			<td><%= link_to item.name, admins_item_path(item) %></td>
 			<td><%= item.price %></td>
 			<td><%= item.genre.name%></td>
 			<td><%= item.sale_status %></td>
