--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -1,2 +1,33 @@
-<h1>Items#show</h1>
-<p>Find me in app/views/items/show.html.erb</p>
+<h1>商品　詳細画面</h1>
+
+  <div class="item_image">
+	<%= attachment_image_tag @item, :image, size: 50, fallback:"no_image.jpg"%>
+  </div>
+  <table>
+  	<tbody>
+  		<tr>
+  			<td>商品名</td>
+  			<td><%= @item.name %></td>
+  		</tr>
+  		<tr>
+  			<td>商品説明</td>
+  			<td><%= @item.description %></td>
+  		</tr>
+  		<tr>
+  			<td>ジャンル</td>
+  			<td><%= @item.genre.name %> </td>
+  		</tr>
+  		<tr>
+  			<td>税抜価格</td>
+  			<td><%= @item.price %></td>
+  		</tr>
+  		<tr>
+  			<td>販売ステータス</td>
+  			<td><%= @item.sale_status %></td>
+  		</tr>
+  		<tr>
+  			<td><%= link_to "編集", edit_admins_item_path(@item) %> </td>
+  		</tr>
+  	</tbody>
+  </table>
+
