--- a/app/views/admins/end_users/show.html.erb
+++ b/app/views/admins/end_users/show.html.erb
@@ -1,8 +1,7 @@
-<body>
-	<h1>会員詳細画面</h1>
+<div class="container">
+	<div class="row">
+		<h1>会員詳細画面</h1>
 		<table>
-			<thead>
-			</thead>
 			<tbody>
 				<tr>
 					<td>顧客ID</td>
@@ -43,7 +42,7 @@
 					<td><%= link_to "編集する",edit_admins_end_user_path(@end_user.id) %></td>
 					<td><%= link_to "注文履歴一覧を見る" %></td>
 				</tr>
-				<% end %>
 			</tbody>
 		</table>
-</body>
+	</div>
+</div>
