--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -1,2 +1,6 @@
-<div>admins#top</div>
-<div>ジャンル検索</div>
+<div class="container">
+	<div class="row">
+		<div>admins#top</div>
+		<div>ジャンル検索</div>
+	</div>
+</div>
