--- a/app/views/end_users/homes/about.html.erb
+++ b/app/views/end_users/homes/about.html.erb
@@ -1,2 +1,6 @@
-<h1>EndUsers::Homes#about</h1>
-<p>Find me in app/views/end_users/homes/about.html.erb</p>
+<div class="container">
+	<div class="row">
+		<h1>EndUsers::Homes#about</h1>
+		<p>Find me in app/views/end_users/homes/about.html.erb</p>
+	</div>
+</div>
