--- a/app/views/end_users/cart_items/index.html.erb
+++ b/app/views/end_users/cart_items/index.html.erb
@@ -1,43 +1,47 @@
-<h2>ショッピングカート</h2>
+<div class="container">
+	<div class="row">
+		<h2>ショッピングカート</h2>
 
-<thead>
-	<tr>
-		<th>商品名</th>
-		<th>単価(税抜)</th>
-		<th>数量</th>
-		<th>小計</th>
-		<th></th>
-	</tr>
+		<thead>
+			<tr>
+				<th>商品名</th>
+				<th>単価(税抜)</th>
+				<th>数量</th>
+				<th>小計</th>
+				<th></th>
+			</tr>
 
-	<%= @cart_item.each do |cart| %>
-	<tr>
-		<tb>
-			<%= cart.items.name %>
-		</tb>
-		<tb>
-			<%= cart.items.price %>
-		</tb>
-		<tb>
-			<%= "" %>
-		</tb>
-		<tb>
-			<%= "" %>
-		</tb>
-		<tb>
-			<%= "" %>
-		</tb>
-	</tr>
-	<% end %>
-</thead>
+			<%= @cart_item.each do |cart| %>
+			<tr>
+				<tb>
+					<%= cart.items.name %>
+				</tb>
+				<tb>
+					<%= cart.items.price %>
+				</tb>
+				<tb>
+					<%= "" %>
+				</tb>
+				<tb>
+					<%= "" %>
+				</tb>
+				<tb>
+					<%= "" %>
+				</tb>
+			</tr>
+			<% end %>
+		</thead>
 
-<thead>
-	<tr>
-		<tb>
-			合計金額
-		</tb>
-		<tb>
-		<!-- 合計金額が表示される様に変更 -->
-			<%= "合計金額" %>
-		</tb>
-	</tr>
-</thead>
+		<thead>
+			<tr>
+				<tb>
+					合計金額
+				</tb>
+				<tb>
+					<!-- 合計金額が表示される様に変更 -->
+					<%= "合計金額" %>
+				</tb>
+			</tr>
+		</thead>
+	</div>
+</div>
