--- a/app/views/end_users/end_users/show.html.erb
+++ b/app/views/end_users/end_users/show.html.erb
@@ -1,3 +1,7 @@
-<h2>マイページ</h2>
+<div class="container">
+	<div class="row">
+		<h2>マイページ</h2>
 
-<%= link_to "登録情報変更" edit_end_user_registration_path %>
+		<%= link_to "登録情報変更" edit_end_user_registration_path %>
+	</div>
+</div>
