--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -1,36 +1,41 @@
-<body>
-	<table class="genres_sarch">
-		<thead>
-			<tr>
-				<th>ジャンル検索</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td><%= link_to "ケーキ","http://localhost:3000/end_users/genres/2/items" %></td>
-			</tr>
-			<tr>
-				<td><%= link_to "焼き菓子","http://localhost:3000/end_users/genres/3/items" %></td>
-			</tr>
-			<tr>
-				<td><%= link_to "プリン","http://localhost:3000/end_users/genres/4/items" %></td>
-			</tr>
-			<tr>
-				<td><%= link_to "キャンディ","http://localhost:3000/end_users/genres/5/items" %></td>
-			</tr>
-		</tbody>
-	</table>
+<div class="container">
+	<div class="row">
+		<body>
+			<table class="genres_sarch">
+				<thead>
+					<tr>
+						<th>ジャンル検索</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><%= link_to "ケーキ","http://localhost:3000/end_users/genres/2/items" %></td>
+					</tr>
+					<tr>
+						<td><%= link_to "焼き菓子","http://localhost:3000/end_users/genres/3/items" %></td>
+					</tr>
+					<tr>
+						<td><%= link_to "プリン","http://localhost:3000/end_users/genres/4/items" %></td>
+					</tr>
+					<tr>
+						<td><%= link_to "キャンディ","http://localhost:3000/end_users/genres/5/items" %></td>
+					</tr>
+				</tbody>
+			</table>
 
-	<div>
-		<h1><%= @genre.name %>全<%= @genre.items.count %>件</h1>
+			<div>
+				<h1><%= @genre.name %>全<%= @genre.items.count %>件</h1>
+			</div>
+
+			<% @items.each do |item| %>
+			<div class="item_image">
+				<%= attachment_image_tag item, :image, size: 50, fallback:"no_image.jpg"%>
+				<%= item.name %>
+				<P>¥<%= item.price %>(税抜き)</P>
+			</div>
+			<% end %>
+
+		</body>
+
 	</div>
-
-	<% @items.each do |item| %>
-	<div class="item_image">
-		<%= attachment_image_tag item, :image, size: 50, fallback:"no_image.jpg"%>
-		<%= item.name %>
-		<P>¥<%= item.price %>(税抜き)</P>
-	</div>
-	<% end %>
-
-</body>
+</div>
