--- a/app/views/end_users/orders/edit.html.erb
+++ b/app/views/end_users/orders/edit.html.erb
@@ -1,24 +1,28 @@
-<body>
-	<h2>配送先編集</h2>
-	<%= form_for @order do |f| %>
-	<table>
-		<thead>
-			<tr>
-				<th>郵便番号</th>
-				<td><%= f.text_field :zip_code %></td>
-			</tr>
-			<tr>
-				<th>住所</th>
-				<td><%= f.text_field :address %></td>
-			</tr>
-			<tr>
-				<th>宛名</th>
-				<td><%= f.text_field :order_name %></td>
-			</tr>
-		</thead>
-	</table>
-	<button >
-	<%= f.submit "編集する" %>
-	</button>
-	<% end %>
-</body>
+<div class="container">
+	<div class="row">
+		<body>
+			<h2>配送先編集</h2>
+			<%= form_for @order do |f| %>
+			<table>
+				<thead>
+					<tr>
+						<th>郵便番号</th>
+						<td><%= f.text_field :zip_code %></td>
+					</tr>
+					<tr>
+						<th>住所</th>
+						<td><%= f.text_field :address %></td>
+					</tr>
+					<tr>
+						<th>宛名</th>
+						<td><%= f.text_field :order_name %></td>
+					</tr>
+				</thead>
+			</table>
+			<button >
+				<%= f.submit "編集する" %>
+			</button>
+			<% end %>
+		</body>
+	</div>
+</div>
