--- a/app/views/end_users/orders/index.html.erb
+++ b/app/views/end_users/orders/index.html.erb
@@ -1,56 +1,60 @@
-<body>
-	<h2>配送先登録/一覧</h2>
-	<%= form_for(@order,url:end_users_orders_path, method: :post)  do |f| %>
-	<table>
-		<thead>
-			<tr>
-				<th>郵便番号</th>
-				<td><%= f.text_field :zip_code %></td>
-			</tr>
-			<tr>
-				<th>住所</th>
-				<td><%= f.text_field :address %></td>
-			</tr>
-			<tr>
-				<th>宛名</th>
-				<td><%= f.text_field :order_name %></td>
-			</tr>
-		</thead>
-	</table>
-	<button >
-	<%= f.submit "登録する" %>
-	</button>
-	<% end %>
-
-
-	<table>
-		<thead>
-			<tr>
-				<th>郵便番号</th>
-				<th>住所</th>
-				<th>宛名</th>
-				<th></th>
-			</tr>
-		</thead>
-		<tbody>
-			<% @orders.each do |order| %>
-			<tr>
-				<td>
-					<%= order.zip_code %>
-	 			</td>
-				<td>
-					<%= order.address %>
-			    </td>
-				<td>
-					<%= order.order_name %>
-				</td>
-				<td>
-					<%= link_to "編集する", edit_end_users_order(order.id) %>
-					<%= link_to "削除する", end_users_order(order.id),method: :delete %>
-				</td>
-			</tr>
+<div class="container">
+	<div class="row">
+		<body>
+			<h2>配送先登録/一覧</h2>
+			<%= form_for(@order,url:end_users_orders_path, method: :post)  do |f| %>
+			<table>
+				<thead>
+					<tr>
+						<th>郵便番号</th>
+						<td><%= f.text_field :zip_code %></td>
+					</tr>
+					<tr>
+						<th>住所</th>
+						<td><%= f.text_field :address %></td>
+					</tr>
+					<tr>
+						<th>宛名</th>
+						<td><%= f.text_field :order_name %></td>
+					</tr>
+				</thead>
+			</table>
+			<button >
+				<%= f.submit "登録する" %>
+			</button>
 			<% end %>
-		</tbody>
-	</table>
 
-</body>
+
+			<table>
+				<thead>
+					<tr>
+						<th>郵便番号</th>
+						<th>住所</th>
+						<th>宛名</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @orders.each do |order| %>
+					<tr>
+						<td>
+							<%= order.zip_code %>
+						</td>
+						<td>
+							<%= order.address %>
+						</td>
+						<td>
+							<%= order.order_name %>
+						</td>
+						<td>
+							<%= link_to "編集する", edit_end_users_order(order.id) %>
+							<%= link_to "削除する", end_users_order(order.id),method: :delete %>
+						</td>
+					</tr>
+					<% end %>
+				</tbody>
+			</table>
+
+		</body>
+	</div>
+</div>
