--- a/app/views/admins/end_users/index.html.erb
+++ b/app/views/admins/end_users/index.html.erb
@@ -13,7 +13,7 @@
 			<% @end_users.each do |end_user| %>
 			<tr>
 				<td><%= end_user.id %></td>
-				<td><%= link_to @end_user.name,admins_end_user_path(end_user.id)  %></td>
+				<td><%= link_to end_user.full_name ,admins_end_user_path(end_user.id)  %></td>
 				<td><%= end_user.email  %></td>
 				<td><%= "後で記述"  %></td>
 			</tr>
