--- a/app/views/admins/end_users/index.html.erb
+++ b/app/views/admins/end_users/index.html.erb
@@ -13,11 +13,11 @@
 			<% @end_users.each do |end_user| %>
 			<tr>
 				<td><%= end_user.id %></td>
-				<td><%= link_to @end_user.name,admins_end_user_path(end_user.id)  %></td>
+				<td><%= link_to end_user.first_name,admins_end_user_path(end_user) %></td>
 				<td><%= end_user.email  %></td>
 				<td><%= "後で記述"  %></td>
 			</tr>
 			<% end %>
 		</tbody>
 	</table>
-</body>
+</bod
