--- a/app/views/admins/end_users/show.html.erb
+++ b/app/views/admins/end_users/show.html.erb
@@ -14,7 +14,10 @@
 				</tr>
 				<tr>
 					<td>氏名</td>
-					<td><%= @end_user.name %></td>
+					<td>
+						<%= @end_user.last_name %>
+						<%= @end_user.first_name %>
+					</td>
 				</tr>
 				<tr>
 					<td>フリガナ</td>
@@ -43,7 +46,6 @@
 					<td><%= link_to "編集する",edit_admins_end_user_path(@end_user.id) %></td>
 					<td><%= link_to "注文履歴一覧を見る" %></td>
 				</tr>
-				<% end %>
 			</tbody>
 		</table>
 </body>
