--- a/app/views/admins/items/edit.html.erb
+++ b/app/views/admins/items/edit.html.erb
@@ -13,7 +13,7 @@
 				<%= f.text_area :description%>
 
 				<label>ジャンル</label>
-				<%= f.select :name, Genre.all.map { |genre| [genre.name] } %>
+				<%= f.select :genre_id, Genre.all.map { |genre| [genre.name] } %>
 
 				<label>税抜価格</label>
 				<%= f.text_field :price%>
