--- a/app/views/end_users/end_users/show.html.erb
+++ b/app/views/end_users/end_users/show.html.erb
@@ -2,8 +2,50 @@
 	<div class="row">
 		<h2>マイページ</h2>
 
+<h2>登録情報</h2>
+<%= link_to "登録情報変更",edit_end_user_registration_path %>
+<%= link_to "パスワードを変更する",edit_end_user_password_path %>
 
-<%= link_to "登録情報変更" edit_end_user_registration_path %>
+<table>
+		<thead>
+			<tr>
+				<th>氏名</th>
+				<td>
+					<%= @end_user.first_name %>
+					<%= @end_user.last_name %>
+				</td>
+			</tr>
+			<tr>
+				<th>カナ</th>
+				<td>
+					<%= @end_user.first_name %>
+					<%= @end_user.last_name %>
+				</td>
+			</tr>
+			<tr>
+				<th>郵便番号</th>
+				<td><%= @end_user.zip_code %></td>
+			</tr>
+			<tr>
+				<th>住所</th>
+				<td><%= @end_user.address %></td>
+			</tr>
+			<tr>
+				<th>電話番号</th>
+				<td><%= @end_user.phone_number %></td>
+			</tr>
+			<tr>
+				<th>メールアドレス</th>
+				<td><%= @end_user.email %></td>
+			</tr>
+		</thead>
+	</table>
+
+<h2>配送先</h2>
+	<%= link_to "一覧を見る",end_users_shipping_address_path(@end_user) %>
+
+<h2>注文履歴</h2>
+	<%= link_to "一覧を見る",end_users_orders_path %>
 
 	</div>
 </div>
