--- a/app/views/admins/items/new.html.erb
+++ b/app/views/admins/items/new.html.erb
@@ -30,7 +30,7 @@
 				<li>
 
 					<label>販売ステータス</label>
-					<%= f.select :sale_status, [["販売中", "販売中"], ["販売休止中", "販売休止中"]] %>
+					<%= f.select :sale_status, [["販売中", "0"], ["販売休止中", "1"]] %>
 				</li>
 				<li>
 
