--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,52 +7,55 @@
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <script src="https://kit.fontawesome.com/82c3077383.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
+  <link href="https://fonts.googleapis.com/css?family=Creepster&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <header class="sticky-top">
-    <h1>ながのCAKE</h1>
-    <nav class="container">
-      <ul class="nav navbar-nav">
-        <% if end_user_signed_in? %>
-        <li class="">
-          <a class="glyphicon glyphicon-user" <%= link_to 'My.Page' %> </a>
-       </li>
-       <li class="">
-        <a class="glyphicon glyphicon-link about" <%= link_to 'About', end_users_homes_about_path %> </a>
+  <header>
+  <h1 class="header">Ngano<i class="fas fa-birthday-cake my-orange fa-2x fa-fw faa-float animated"></i>Cake</h1>
+  <nav class="">
+    <ul class="">
+      <% if end_user_signed_in? %>
+      <li class="list">
+        <%= link_to 'My.Page', end_users_end_user_path, class: "glyphicon glyphicon-user black" %>
       </li>
-      <li class="">
-        <a class="glyphicon glyphicon-log-out" aria-hidden="true"<%= link_to 'Logout', destroy_end_user_session_path, method: :delete %> </a>
+      <li class="list">
+        <%= link_to 'About', end_users_homes_about_path, class: "glyphicon glyphicon-link about black" %>
       </li>
-      <li class="">
-        <a class="glyphicon glyphicon-shopping-cart" aria-hidden="true"<%= link_to 'Cart', end_users_cart_items_path %> </a>
+      <li class="list">
+        <%= link_to 'Logout', destroy_end_user_session_path, method: :delete, class: "glyphicon glyphicon-log-out black" %>
+      </li>
+      <li class="list">
+        <%= link_to 'Cart', end_users_cart_items_path, class: "glyphicon glyphicon-shopping-cart black" %>
       </li>
       <% elsif admin_signed_in? %>
       <li class="">
-        <a class="glyphicon glyphicon-th" aria-hidden="true"<%= link_to '商品一覧', admins_items_path %> </a>
+        <%= link_to '商品一覧', admins_items_path, class: "glyphicon glyphicon-th black" %>
       </li>
       <li class="">
-        <a class="glyphicon glyphicon-user" <%= link_to '会員一覧', admins_end_users_path %> </a>
+        <%= link_to '会員一覧', admins_end_users_path, class: "glyphicon glyphicon-user black" %>
       </li>
       <li class="">
-        <a class="glyphicon glyphicon-th-list" aria-hidden="true"<%= link_to '注文履歴一覧' %> </a>
+        <%= link_to '注文履歴一覧' , class: "glyphicon glyphicon-th-list black"%>
       </li>
       <li class="">
-        <a class="glyphicon glyphicon-tag" aria-hidden="true" <%= link_to 'ジャンル管理', admins_genres_path %> </a>
+        <%= link_to 'ジャンル管理', admins_genres_path, class: "glyphicon glyphicon-tag black" %>
       </li>
       <li class="">
-        <a class="glyphicon glyphicon-log-out" aria-hidden="true"<%= link_to 'Logout', destroy_end_user_session_path, method: :delete %> </a>
+        <%= link_to 'Logout', destroy_end_user_session_path, method: :delete, class: "glyphicon glyphicon-log-out black" %>
       </li>
 
       <% else %>
       <li class="">
-        <a class="glyphicon glyphicon-log-in" aria-hidden="true"   <%= link_to ' Login', new_end_user_session_path %> </a>
+        <%= link_to ' Login', new_end_user_session_path, class: "glyphicon glyphicon-log-in black" %>
       </li>
       <li class="">
-        <a class="glyphicon glyphicon-edit sign_up"  <%= link_to ' Signin', new_end_user_registration_path %> </a>
+        <%= link_to ' Signin', new_end_user_registration_path,class: "glyphicon glyphicon-edit sign_up black" %>
       </li>
       <li class="">
-        <a class="glyphicon glyphicon-link about" <%= link_to 'About', homes_about_path %> </a>
+        <%= link_to 'About', homes_about_path, class: "glyphicon glyphicon-link about black" %>
       </li>
       <% end %>
     </ul>
@@ -61,9 +64,9 @@
 <div class="body">
   <%= yield %>
 </div>
-<footer class="container">
+ <footer class="container">
   <div class="row">
-    <div class="col-xs-3 col-xs-offset-4">
+    <div class="footer">
       <p>©ながのCAKE Production by TGT</p>
     </div>
   </footer>
