--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
 		<h1>管理者画面</h1>
-		<h2>本日の注文件数<%= @order.count %>件</h2>
+		<h2>本日の注文件数<%= @order_count.count %>件</h2>
 	</div>
 </div>
