--- a/app/views/end_users/end_users/show.html.erb
+++ b/app/views/end_users/end_users/show.html.erb
@@ -42,7 +42,7 @@
 	</table>
 
 <h2>配送先</h2>
-	<%= link_to "一覧を見る",end_users_shipping_address_path(@end_user) %>
+	<%= link_to "一覧を見る",end_users_shipping_addresses_path %>
 
 <h2>注文履歴</h2>
 	<%= link_to "一覧を見る",end_users_orders_path %>
