--- a/app/views/end_users/homes/top.html.erb
+++ b/app/views/end_users/homes/top.html.erb
@@ -1,6 +1,35 @@
 <div class="container">
 	<div class="row">
-		<div>一覧</div>
-		<div>ジャンル検索</div>
+		<table class="genres_sarch">
+			<thead>
+				<tr>
+					<th>ジャンル検索</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><%= link_to "ケーキ","http://localhost:3000/end_users/genres/2/items" %></td>
+				</tr>
+				<tr>
+					<td><%= link_to "焼き菓子","http://localhost:3000/end_users/genres/3/items" %></td>
+				</tr>
+				<tr>
+					<td><%= link_to "プリン","http://localhost:3000/end_users/genres/4/items" %></td>
+				</tr>
+				<tr>
+					<td><%= link_to "キャンディ","http://localhost:3000/end_users/genres/5/items" %></td>
+				</tr>
+			</tbody>
+		</table>
+		<h1>一覧(全<%= @items.count %>件)</h1>
+		<% @items.each do |item| %>
+					<div class="item-box">
+						<p><%= link_to end_users_item_path(item) do %>
+							<%= attachment_image_tag item, :image, size: 50, fallback:"no_image.jpg"%>
+							<% end %></p>
+						<p><%= item.name %></p>
+						<p><%= item.price %></p>
+					</div>
+					<% end %>
 	</div>
 </div>
