--- a/app/views/end_users/items/index.html.erb
+++ b/app/views/end_users/items/index.html.erb
@@ -24,12 +24,15 @@
 			</table>
 
 			<div>
+
 				<h1><%= @genre.name %>全<%= @genre.items.count %>件</h1>
 			</div>
 
 			<% @items.each do |item| %>
 			<div class="item_image">
+				<%= link_to end_users_item_path(item) do %>
 				<%= attachment_image_tag item, :image, size: 50, fallback:"no_image.jpg"%>
+				<% end %>
 				<%= item.name %>
 				<P>¥<%= item.price %>(税抜き)</P>
 			</div>
