--- a/app/views/admins/end_users/edit.html.erb
+++ b/app/views/admins/end_users/edit.html.erb
@@ -11,5 +11,11 @@
 			<td><%= f.text_field, :first_name %></td>
 			<td><%= f.text_field, :last_name %></td>
 		</tr>
+		<tr>
+			<td>フリガナ</td>
+			<td><%= f.text_field, :first_name_kana %></td>
+			<td><%= f.text_field, :last_name_kana %></td>
+		
+		</tr>
 	</tbody>
 </table>
