--- a/app/views/end_users/cart_items/index.html.erb
+++ b/app/views/end_users/cart_items/index.html.erb
@@ -21,9 +21,10 @@
 				</tb>
 				<tb>
 
-					<%= form_for(@item, url:end_users_cart_items_path,method: :post) do |f| %>
+					<%= form_for(@order_item, url:end_users_cart_items_path,method: :post) do |f| %>
 					<%= cart_item.quantity %>
-					<%= f.number_field : %>
+					<%= f.number_field :order_quantity %>
+					<%= f.submit "変更する" %>
 					<% end %>
 
 
@@ -34,7 +35,7 @@
 				</tb>
 				<tb>
 
-					<%= link_to "削除" end_users_cart_items_path, method: :deleat %>
+					<%= link_to "削除", end_users_cart_items_path, method: :delete %>
 
 				</tb>
 			</tr>
@@ -58,7 +59,7 @@
 
 </div>
 
-<%= link_to "買い物を続ける" end_users_items_path %>
+<%= link_to "買い物を続ける", end_users_items_path %>
 
-<%= link_to "情報入力に進む" new_end_users_order_path %>
+<%= link_to "情報入力に進む", new_end_users_order_path %>
 
