--- a/app/views/admins/end_users/edit.html.erb
+++ b/app/views/admins/end_users/edit.html.erb
@@ -1,21 +1,41 @@
 <h1>会員編集画面</h1>
 <table>
 	<tbody>
-		<%= form_for(@end_user) do |f| %>
+		<%= form_for(@end_user, url:admins_end_user_path, method: :patch) do |f| %>
 		<tr>
 			<td>会員ID</td>
 			<td><%= @end_user.id %></td>
 		</tr>
 		<tr>
 			<td>氏名</td>
-			<td><%= f.text_field, :first_name %></td>
-			<td><%= f.text_field, :last_name %></td>
+			<td><%= f.text_field :first_name %></td>
+			<td><%= f.text_field :last_name %></td>
 		</tr>
 		<tr>
 			<td>フリガナ</td>
-			<td><%= f.text_field, :first_name_kana %></td>
-			<td><%= f.text_field, :last_name_kana %></td>
-		
+			<td><%= f.text_field :first_name_kana %></td>
+			<td><%= f.text_field :last_name_kana %></td>
 		</tr>
+		<tr>
+			<td>郵便番号</td>
+			<td><%= f.text_field :zip_code %></td>
+		</tr>
+		<tr>
+			<td>住所</td>
+			<td><%= f.text_field :address %></td>
+		</tr>
+		<tr>
+			<td>電話番号</td>
+			<td><%= f.text_field :phone_number %></td>
+		</tr>
+		<tr>
+			<td>メールアドレス</td>
+			<td><%= f.text_field :email　%></td>
+		</tr>
+		<tr>
+			<td>会員ステータス</td>
+			<td></td>
+		</tr>
+		<% end %>
 	</tbody>
 </table>
