--- a/app/views/admins/end_users/show.html.erb
+++ b/app/views/admins/end_users/show.html.erb
@@ -13,14 +13,17 @@
 				</tr>
 				<tr>
 					<td>氏名</td>
-					<td><%= @end_user.full_name %></td>
+					<td>
+						<%= @end_user.first_name %>
+						<%= @end_user.last_name %>
+					</td>
 
 				</tr>
 				<tr>
 					<td>フリガナ</td>
 					<td>
-						<%= @end_user.last_name_kana %>
 						<%= @end_user.first_name_kana %>
+						<%= @end_user.last_name_kana %>
 					</td>
 				</tr>
 				<tr>
