--- a/app/views/end_users/orders/confirm.html.erb
+++ b/app/views/end_users/orders/confirm.html.erb
@@ -1,3 +1,4 @@
+<h2>注文情報確認</h2>
 <div class="container">
 	<div class="row">
 		<h2>ショッピングカート</h2>
@@ -11,13 +12,12 @@
 					<th>単価(税込)</th>
 					<th>数量</th>
 					<th>小計</th>
-					<th></th>
 				</tr>
 			</thead>
 
 			<tbody>
 				<% @sum = 0 %>
-				<% @cart_items.each do |cart_item| %>
+				<% current_end_user.cart_items.each do |cart_item| %>
 				<tr>
 					<td>
 						<%= cart_item.item.name %>
@@ -26,27 +26,13 @@
 						<%= cart_item.item.price %>
 					</td>
 					<td>
-
-						<%= form_for(cart_item, url:end_users_cart_item_path(cart_item),method: :patch) do |f| %>
 						<%= cart_item.quantity %>
-						<%= f.number_field :quantity %>
-						<%= f.submit "変更する" %>
-						<% end %>
-
-
-
-
 					</td>
 					<td>
 						<%= cart_item.item.price * cart_item.quantity %>
 					</td>
-					<td>
-
-						<%= link_to "削除", end_users_cart_item_path(cart_item), method: :delete %>
-
-					</td>
 				</tr>
-				<%= @sum += cart_item.item.price * cart_item.quantity %>
+				<% @sum += cart_item.item.price * cart_item.quantity %>
 				<% end %>
 			</tbody>
 		</table>
@@ -66,8 +52,11 @@
 	</div>
 
 </div>
+<%= link_to "情報入力に進む", new_end_users_order_path %><br>
 
-<%= link_to "買い物を続ける", end_users_items_path %>
 
-<%= link_to "情報入力に進む", new_end_users_order_path %>
+郵便番号: <%= @order.zip_code %><br>
+住所: <%= @order.address %><br>
+宛名:<%= @order.order_name %><br>
 
+<%= @order.payment_method %>
