--- a/app/views/end_users/orders/new.html.erb
+++ b/app/views/end_users/orders/new.html.erb
@@ -3,61 +3,45 @@
 		<h2>購入情報入力画面</h2>
 
 		<h3>支払方法</h3>
-		<%= form_for(@order,url:end_users_order_path, method: :PATCH) do |f| %>
+		<%= form_for(@order,url:end_users_orders_confirm_path, method: :get) do |f| %>
 		<label>
 			<%= f.radio_button :payment_method, 0 %>クレジットカード
 		</label>
 		<label>
 			<%= f.radio_button :payment_method, 1 %>銀行振込
 		</label>
-		<% end %>
 
 		<h3>お届け先</h3>
-		<%= form_for(@,url:, method: :) do |f| %>
-		<laber>
-			<tr>
-				<th>
-					<%= f.radio_button :,  %>ご自身の住所
-				</th>
-			</tr>
-		</laber>
-		<tbody>
-			<tr>
-				<th>
-					<%= @end_user.address %>
-				</th>
-			</tr>
-		</tbody>
+		<label>
+				<%= radio_button_tag "address_select", "1" %>ご自身の住所
+		</label>
+		<div>
+				<%= current_end_user.zip_code %>
+				<%= current_end_user.address %>
+				<%= current_end_user.first_name %>
+				<%= current_end_user.last_name %>
+		</div>
 
-		<laber>
-			<tr>
-				<th>
-					<%= f.radio_button :,  %>登録済み住所から
-				</th>
-			</tr>
-		</laber>
-		<tbody>
-			<tr>
-				<th>
-					<%= f.collection_select :, ShippingAddress.adders, :id, :name %>
-				</th>
-			</tr>
-		</tbody>
+		<label>
+				<%= radio_button_tag "address_select", "2" %>登録済み住所から選択
+		</label>
+		<label>
+				<%= f.collection_select :???, ShippingAddress.address, :id, :name %>
+		</label>
 
-		<laber>
-			<tr>
-				<th>
-					<%= f.radio_button :,  %>新しいお届け先
-				</th>
-			</tr>
-		</laber>
-		<tbody>
-			<tr>
-				<th>
-					<%= f.collection_select :address, ShippingAddress.adders, :id, :name %>
-				</th>
-			</tr>
-		</tbody>
+		<label>
+				<%= radio_button_tag "address_select", "3" %>新しいお届け先
+		</label>
+
+		<div class="new-shipping">
+			<label>郵便番号</label>
+					<%= f.text_field :zip_code %>ハイフンなし
+			<label>住所</label>
+					<%= f.text_field :address %>
+			<label>宛名</label>
+					<%= f.text_field :order_name %>
+		</div>
+		<%= f.submit '購入確認に進む' %>
 		<% end %>
 	</div>
 </div>
