--- a/app/views/admins/end_users/index.html.erb
+++ b/app/views/admins/end_users/index.html.erb
@@ -18,7 +18,7 @@
 						<td><%= end_user.id %></td>
 						<td><%= link_to end_user.full_name ,admins_end_user_path(end_user.id)  %></td>
 						<td><%= end_user.email  %></td>
-						<td><%= "後で記述"  %></td>
+						<td><%= end_user.menber_status %></td>
 					</tr>
 					<% end %>
 				</tbody>
