--- a/app/views/end_users/end_users/edit.html.erb
+++ b/app/views/end_users/end_users/edit.html.erb
@@ -1,20 +1,16 @@
-<h1>会員編集画面</h1>
+<h1>登録情報編集</h1><div>退会する</div>
 <table>
 	<tbody>
-		<%= form_for(@end_user, url:admins_end_user_path(@end_user.id), method: :patch) do |f| %>
-		<tr>
-			<td>会員ID</td>
-			<td><%= @end_user.id %></td>
-		</tr>
+		<%= form_for(@end_user, url:end_users_end_user_path(@end_user.id)) do |f| %>
 		<tr>
 			<td>氏名</td>
 			<td><%= f.text_field :first_name %></td>
 			<td><%= f.text_field :last_name %></td>
 		</tr>
 		<tr>
-			<td>フリガナ</td>
+			<td>カナ</td>
 			<td><%= f.text_field :first_name_kana %></td>
-			<td><%= f.text_field :last_name_kana %></td>
+			<td><%= f.text_field :last_name_kana%></td>
 		</tr>
 		<tr>
 			<td>郵便番号</td>
@@ -33,15 +29,7 @@
 			<td><%= f.text_field :email %></td>
 		</tr>
 		<tr>
-			<td>会員ステータス</td>
-			<td>
-				<label><%= f.radio_button :menber_status, :有効 %>有効</label>
-				<label><%= f.radio_button :menber_status, :退会済み %>退会済み</label>
-			</td>
-		</tr>
-
-		<tr>
-			<td><%= f.submit "変更を保存する" %></td>
+			<td><%= f.submit "編集内容を保存する" %></td>
 		</tr>
 		<% end %>
 	</tbody>
