--- a/app/views/end_users/orders/confirm.html.erb
+++ b/app/views/end_users/orders/confirm.html.erb
@@ -1,10 +1,6 @@
 <h2>注文情報確認</h2>
 <div class="container">
 	<div class="row">
-		<h2>ショッピングカート</h2>
-		<div class="empty-cart">
-			<%= link_to "カートを空にする",end_users_cart_items_empty_cart_path %>
-		</div>
 		<table>
 			<thead>
 				<tr>
@@ -41,10 +37,26 @@
 			<tbody>
 				<tr>
 					<td>
+						送料
+					</td>
+					<td>
+						<%= 800 %>
+					</td>
+				</tr>
+				<tr>
+					<td>
 						合計金額
 					</td>
 					<td>
 						<%= @sum %>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						請求金額
+					</td>
+					<td>
+						<%= 800+@sum %>
 					</td>
 				</tr>
 			</tbody>
@@ -52,11 +64,13 @@
 	</div>
 
 </div>
-<%= link_to "情報入力に進む", new_end_users_order_path %><br>
 
-
+<h2>支払方法</h2>
+<%= @order.payment_method %>
+<h2>お届け先</h2>
 郵便番号: <%= @order.zip_code %><br>
 住所: <%= @order.address %><br>
 宛名:<%= @order.order_name %><br>
 
-<%= @order.payment_method %>
+<%= link_to "購入を確定する", end_users_orders_path,method: :post %><br>
+
