--- a/app/views/end_users/orders/new.html.erb
+++ b/app/views/end_users/orders/new.html.erb
@@ -26,8 +26,8 @@
 				<%= radio_button_tag "address_select", "2" %>登録済み住所から選択
 		</label>
 		<label>
-				<%= f.collection_select :???, ShippingAddress.address, :id, :name %>
-		</label>
+				<%= f.collection_select :end_user_id, ShippingAddress.all,:id,:zip_code %>
+		</label><br>
 
 		<label>
 				<%= radio_button_tag "address_select", "3" %>新しいお届け先
@@ -35,9 +35,9 @@
 
 		<div class="new-shipping">
 			<label>郵便番号</label>
-					<%= f.text_field :zip_code %>ハイフンなし
+					<%= f.text_field :zip_code %>ハイフンなし<br>
 			<label>住所</label>
-					<%= f.text_field :address %>
+					<%= f.text_field :address %><br>
 			<label>宛名</label>
 					<%= f.text_field :order_name %>
 		</div>
