--- a/app/views/end_users/shipping_addresses/edit.html.erb
+++ b/app/views/end_users/shipping_addresses/edit.html.erb
@@ -1,9 +1,8 @@
-<div class="container">
-	<div class="row">
-
 <body>
+	<div class="container">
+	<div class="row">
 	<h2>配送先編集</h2>
-	<%= form_for @shipping_address do |f| %>
+	<%= form_for(@shipping_address,url:end_users_shipping_address_path, method: :put) do |f| %>
 	<table>
 		<thead>
 			<tr>
@@ -24,6 +23,6 @@
 	<%= f.submit "編集する" %>
 	</button>
 	<% end %>
-</body>
 	</div>
 </div>
+</body>
