--- a/app/views/end_users/orders/index.html.erb
+++ b/app/views/end_users/orders/index.html.erb
@@ -17,7 +17,7 @@
 		<tbody>
 			<% @orders.each do |order| %>
 			<tr>
-				<td><%= order.creat_at %></td>
+				<td><%= order.create_at %></td>
 				<td><%= order.zip_code %>
 					<%= order.address %>
 					<%= order.order_name %>
