--- a/app/views/end_users/orders/new.html.erb
+++ b/app/views/end_users/orders/new.html.erb
@@ -3,7 +3,7 @@
 		<h2>購入情報入力画面</h2>
 
 		<h3>支払方法</h3>
-		<%= form_for(@order,url:end_users_orders_confirm_path, method: :get) do |f| %>
+		<%= form_with model: @order,local: true,url:end_users_orders_confirm_path, method: :get do |f| %>
 		<label>
 			<%= f.radio_button :payment_method, 0 %>クレジットカード
 		</label>
@@ -26,7 +26,7 @@
 				<%= radio_button_tag "address_select", "2" %>登録済み住所から選択
 		</label>
 		<label>
-				<%= f.collection_select :end_user_id, ShippingAddress.all,:id,:zip_code %>
+				<%= f.collection_select :address_id, ShippingAddress.where(end_user_id:current_end_user.id),:id,:zip_code_and_address_and_order_name %>
 		</label><br>
 
 		<label>
