--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
         <%= link_to '会員一覧', admins_end_users_path, class: "glyphicon glyphicon-user black" %>
       </li>
       <li class="list">
-        <%= link_to '注文履歴一覧' , class: "glyphicon glyphicon-th-list black"%>
+        <%= link_to '注文履歴一覧' ,admins_orders_path, class: "glyphicon glyphicon-th-list black"%>
       </li>
       <li class="list">
         <%= link_to 'ジャンル管理', admins_genres_path, class: "glyphicon glyphicon-tag black" %>
