--- a/app/views/admins/end_users/edit.html.erb
+++ b/app/views/admins/end_users/edit.html.erb
@@ -35,8 +35,8 @@
 		<tr>
 			<td>会員ステータス</td>
 			<td>
-				<label><%= f.radio_button :menber_status, :有効 %>有効</label>
-				<label><%= f.radio_button :menber_status, :退会済み %>退会済み</label>
+				<label><%= f.radio_button :member_status, :有効 %>有効</label>
+				<label><%= f.radio_button :member_status, :退会済み %>退会済み</label>
 			</td>
 		</tr>
 
