--- a/app/views/end_users/homes/top.html.erb
+++ b/app/views/end_users/homes/top.html.erb
@@ -28,7 +28,7 @@
 							<%= attachment_image_tag item, :image, size: 50, fallback:"no_image.jpg"%>
 							<% end %></p>
 						<p><%= item.name %></p>
-						<p><%= item.price %></p>
+						<p>¥<%= item.price %></p>
 					</div>
 					<% end %>
 	</div>
