--- a/app/views/end_users/orders/index.html.erb
+++ b/app/views/end_users/orders/index.html.erb
@@ -17,15 +17,18 @@
 		<tbody>
 			<% @orders.each do |order| %>
 			<tr>
-				<td><%= order.create_at %></td>
+				<td><%= order.created_at.strftime('%Y/%m/%d')  %></td>
 				<td><%= order.zip_code %>
 					<%= order.address %>
 					<%= order.order_name %>
 				</td>
-				<td><%= order.order_item.name %></td>
-				<td><%= order.total_amount %></td>
-				<td><%= order.order_status %></td>
-				<td><%= link_to "表示する",end_users_order(order) %></td>
+
+
+				
+
+
+
+				<td><%= link_to "表示する",end_users_order_path(order %></td>
 			</tr>
 			<% end %>
 		</tbody>
