--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <h2>商品　詳細画面</h2>
 
-    <div class="item_image col-xs-">
-      <%= attachment_image_tag @item, :image, size: 500, fallback:"no_image.jpg"%>
+    <div class="item_image col-xs-3">
+      <%= attachment_image_tag @item, :image, size: 200, fallback:"no_image.jpg"%>
     </div>
     <table>
      <tbody>
