--- a/app/views/end_users/orders/index.html.erb
+++ b/app/views/end_users/orders/index.html.erb
@@ -24,7 +24,10 @@
 				</td>
 
 
-				
+				<!-- 下記の３行を訂正 -->
+				<td><%= order.order_item.name %></td>
+				<td><%= order.total_amount %></td>
+				<td><%= order.order_status %></td>
 
 
 
